--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Booki</title>
 </head>
+
 <body>
-    
+    <div id="main-page">
+        <header>
+            <div id="logo">
+                <img src="images/logo/Booki.png" alt="Booki logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Hébergements</a></li>
+                    <li><a href="#">Activités</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
+
 </html>
