--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Booki</title>
@@ -13,7 +14,7 @@
     <div id="main-page">
         <header>
             <div id="logo">
-                <img src="images/logo/Booki.png" alt="Booki logo">
+                <a href="#"><img src="images/logo/Booki.png" alt="Booki logo"></a>
             </div>
             <nav>
                 <ul>
