--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,17 +12,23 @@
 </head>
 
 <body>
-    <div id="main-page">
-        <header>
-            <div id="logo">
+    <div class="main-page">
+        <nav>
+            <div class="logo">
                 <a href="#"><img src="images/logo/Booki.png" alt="Booki logo"></a>
             </div>
-            <nav>
+            <div class="links">
                 <ul>
                     <li><a href="#">Hébergements</a></li>
                     <li><a href="#">Activités</a></li>
                 </ul>
-            </nav>
+            </div>
+        </nav>
+        <header>
+            <h2>
+                Trouvez votre hébergement pour des vacances de rêve
+            </h2>
+            <p>En plein centre ville ou en pleine nature</p>
         </header>
     </div>
 </body>
