--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
                 </form>
             </div>
         </header>
+        <div class="filters">
+            <h3>
+                Filtres
+            </h3>
+            <ul>
+                <li><a href="#"><i class="icon fas fa-money-bill-wave"></i>Économique</a></li>
+                <li><a href="#"><i class="icon fas fa-child-reaching"></i>Familial</a></li>
+                <li><a href="#"><i class="icon fas fa-heart"></i>Romantique</a></li>
+                <li><a href="#"><i class="icon fas fa-dog"></i>Animaux autorisés</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 
