--- a/index.html
+++ b/index.html
@@ -42,17 +42,43 @@
                 </form>
             </div>
         </header>
-        <div class="filters">
+        <section class="filter-container">
             <h3>
                 Filtres
             </h3>
-            <ul>
-                <li><a href="#"><i class="icon fas fa-money-bill-wave"></i>Économique</a></li>
-                <li><a href="#"><i class="icon fas fa-child-reaching"></i>Familial</a></li>
-                <li><a href="#"><i class="icon fas fa-heart"></i>Romantique</a></li>
-                <li><a href="#"><i class="icon fas fa-dog"></i>Animaux autorisés</a></li>
-            </ul>
-        </div>
+            <div class="filter-container-element">
+                <div class="filter-container-element-icon">
+                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                </div>
+                <span class="filter-container-element-text">
+                    Économique
+                </span>
+            </div>
+            <div class="filter-container-element">
+                <div class="filter-container-element-icon">
+                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                </div>
+                <span class="filter-container-element-text">
+                    Familial
+                </span>
+            </div>
+            <div class="filter-container-element">
+                <div class="filter-container-element-icon">
+                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                </div>
+                <span class="filter-container-element-text">
+                    Romantique
+                </span>
+            </div>
+            <div class="filter-container-element">
+                <div class="filter-container-element-icon">
+                    <i class="fas fa-dog" aria-hidden="true"></i>
+                </div>
+                <span class="filter-container-element-text">
+                    Animaux autorisés
+                </span>
+            </div>
+        </section>
     </div>
 </body>
 
