--- a/index.html
+++ b/index.html
@@ -42,42 +42,102 @@
                 </form>
             </div>
         </header>
+        <!-- Filtres -->
         <section class="filter-container">
             <h3>
                 Filtres
             </h3>
             <div class="filter-container-element">
                 <div class="filter-container-element-icon">
-                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                    <i class="fas fa-money-bill-wave"></i>
                 </div>
-                <span class="filter-container-element-text">
-                    Économique
-                </span>
+                <span class="filter-container-element-text">Économique</span>
             </div>
             <div class="filter-container-element">
                 <div class="filter-container-element-icon">
-                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                    <i class="fas fa-person"></i>
                 </div>
-                <span class="filter-container-element-text">
-                    Familial
-                </span>
+                <span class="filter-container-element-text">Familial</span>
             </div>
             <div class="filter-container-element">
                 <div class="filter-container-element-icon">
-                    <i class="fas fa-money-bill-wave" aria-hidden="true"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
-                <span class="filter-container-element-text">
-                    Romantique
-                </span>
+                <span class="filter-container-element-text">Romantique</span>
             </div>
             <div class="filter-container-element">
                 <div class="filter-container-element-icon">
-                    <i class="fas fa-dog" aria-hidden="true"></i>
+                    <i class="fas fa-dog"></i>
                 </div>
-                <span class="filter-container-element-text">
-                    Animaux autorisés
-                </span>
+                <span class="filter-container-element-text">Animaux autorisés</span>
             </div>
+        </section>
+        <section class="info-container">
+            <div class="info-container-icon">
+                <i class="fas fa-info"></i>
+            </div>
+            <span class="info-container-text">
+                Plus de 500 logements sont disponibles dans cette ville
+            </span>
+        </section>
+        <!-- Hébergements -->
+        <section class="housing-container">
+            <div class="housing-container-text">
+                <h3>
+                    Hébergements à Marseille
+                </h3>
+            </div>
+            <div class="housing-container-elements">
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+                <div class="housing-container-elements-box">
+                    <img class="housing-box-image" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <div class="housing-box-content">
+                        <span class="housing-box-content-title">Titre</span>
+                        <span class="housing-box-content-price">Prix</span>
+                        <div class="housing-box-content-stars"></div>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </div>
 </body>
