--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <span class="filter-container-element-text">Animaux autorisés</span>
             </div>
         </section>
+        <!-- Info -->
         <section class="info-container">
             <div class="info-container-icon">
                 <i class="fas fa-info"></i>
@@ -81,63 +82,230 @@
             </span>
         </section>
         <!-- Hébergements -->
-        <section class="housing-container">
-            <div class="housing-container-text">
+        <section class="housing">
+            <section class="housing-container">
+                <div class="housing-container-text">
+                    <h3>
+                        Hébergements à Marseille
+                    </h3>
+                </div>
+                <div class="housing-container-elements">
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Auberge La Cannebière</span>
+                            <span class="housing-box-content-price">Nuit à partir de 25€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Hotel du port</span>
+                            <span class="housing-box-content-price">Nuit à partir de 52€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Hotel Les mouettes</span>
+                            <span class="housing-box-content-price">Nuit à partir de 76€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Hotel de la mer</span>
+                            <span class="housing-box-content-price">Nuit à partir de 46€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Auberge Le Panier</span>
+                            <span class="housing-box-content-price">Nuit à partir de 23€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="housing-container-elements-box">
+                        <img class="housing-box-image"
+                            src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                        <div class="housing-box-content">
+                            <span class="housing-box-content-title">Hotel chez Amina</span>
+                            <span class="housing-box-content-price">Nuit à partir de 96€</span>
+                            <div class="housing-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="popular-container">
+                <div class="popular-container-text">
+                    <h3>
+                        Les plus populaires
+                    </h3>
+                </div>
+                <div class="popular-container-elements">
+                    <div class="popular-container-elements-box">
+                        <img class="popular-box-image"
+                            src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                        <div class="popular-box-content">
+                            <span class="popular-box-content-title">Hôtel Le soleil du matin</span>
+                            <span class="popular-box-content-price">Nuit à partir de 18€</span>
+                            <div class="popular-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="popular-container-elements">
+                    <div class="popular-container-elements-box">
+                        <img class="popular-box-image"
+                            src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                        <div class="popular-box-content">
+                            <span class="popular-box-content-title">Au coeur de l'eau Chambres d'hotes</span>
+                            <span class="popular-box-content-price">Nuit à partir de 71€</span>
+                            <div class="popular-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="popular-container-elements">
+                    <div class="popular-container-elements-box">
+                        <img class="popular-box-image"
+                            src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                        <div class="popular-box-content">
+                            <span class="popular-box-content-title">Hôtel Tout bleu et Blanc</span>
+                            <span class="popular-box-content-price">Nuit à partir de 68€</span>
+                            <div class="popular-box-content-stars">
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-blue"></i>
+                                <i class="fas fa-star star-gray"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- Activités -->
+        <section class="activities-container">
+            <div class="activities-container-text">
                 <h3>
-                    Hébergements à Marseille
+                    Activités à Marseille
                 </h3>
             </div>
-            <div class="housing-container-elements">
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
+            <div class="activities-container-elements">
+                <div class="activities-container-parent">
+                    <!-- Vieux Port -->
+                    <div class="activities-container-box activity-box-large">
+                        <img class="activity-box-image"
+                            src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                        <div class="activity-box-content">
+                            <span class="activity-box-content-title">Vieux Port</span>
+                        </div>
+                    </div>
+                    <div class="activites-container-secondary-boxes">
+                        <!-- Fort de Pomègues -->
+                        <div class="activities-container-box activity-box-medium">
+                            <img class="activity-box-image"
+                                src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                            <div class="activity-box-content">
+                                <span class="activity-box-content-title">Fort de Pomègues</span>
+                            </div>
+                        </div>
+                        <!-- Iles du Frioul -->
+                        <div class="activities-container-box activity-box-small">
+                            <img class="activity-box-image"
+                                src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                            <div class="activity-box-content">
+                                <span class="activity-box-content-title">Iles du Frioul</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
+                <div class="activities-container-parent">
+                    <!-- Parc National des Calanques -->
+                    <div class="activities-container-box activity-box-large">
+                        <img class="activity-box-image"
+                            src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                        <div class="activity-box-content">
+                            <span class="activity-box-content-title">Parc National des Calanques</span>
+                        </div>
                     </div>
-                </div>
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
-                    </div>
-                </div>
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
-                    </div>
-                </div>
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
-                    </div>
-                </div>
-                <div class="housing-container-elements-box">
-                    <img class="housing-box-image" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <div class="housing-box-content">
-                        <span class="housing-box-content-title">Titre</span>
-                        <span class="housing-box-content-price">Prix</span>
-                        <div class="housing-box-content-stars"></div>
+                    <div class="activites-container-secondary-boxes">
+                        <!-- Notre-Dame-de-la-Garde -->
+                        <div class="activities-container-box activity-box-medium">
+                            <img class="activity-box-image"
+                                src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                            <div class="activity-box-content">
+                                <span class="housing-box-content-title">Notre-Dame-de-la-Garde</span>
+                            </div>
+                        </div>
+                        <!-- Iles du Frioul -->
+                        <div class="activities-container-box activity-box-medium">
+                            <img class="activity-box-image"
+                                src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                            <div class="activity-box-content">
+                                <span class="housing-box-content-title">Parc Longchamp</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </section>
     </div>
 </body>
